--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
-<li><a href="http://kanse.ml/" target="_blank">辣椒导航</a></li>
+<li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.beegooddh.com/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
@@ -206,8 +206,6 @@
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.thkav.info/" target="_blank">桃花开</a></li>
 <li><a href="http://www.wagaga.co/" target="_blank">哇嘎嘎</a></li>
-<li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
-<li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.saojj.xyz/" target="_blank">骚姐姐</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
@@ -219,6 +217,7 @@
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.renyu888.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.avlua.com/" target="_blank">94撸啊</a></li>
+<li><a href="http://laoyaba.com/" target="_blank">老鸭吧</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://www.4599.ink/" target="_blank">久久视频</a></li>
 <li><a href="http://laoshiji22.xyz/" target="_blank">天天爱视频</a></li>
@@ -242,8 +241,8 @@
 <li><a href="http://www.8688av.com/" target="_blank">夏娃视频</a></li>
 <li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
 <li><a href="http://sesexia.co/" target="_blank">超快色色下</a></li>
-<li><a href="http://www.woailg8.com/" target="_blank">撸管会所</a></li>
 <li><a href="http://www.lu1212.com/" target="_blank">哥哥干在线</a></li>
+<li><a href="https://oxxvideo.com/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
@@ -696,7 +695,7 @@
 		<strong><a name="/13/">VR资源</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.daoguovr.org/?fromuid=22908" target="_blank">岛国VR网</a></li>
+<li><a href="http://www.daoguovr.wang/?fromuid=22908" target="_blank">岛国VR网</a></li>
 <li><a href="http://vrporn.com/" target="_blank">VRPorn</a></li>
 <li><a href="https://www.sexlikereal.com/" target="_blank">SexLikeReal</a></li>
 <li><a href="http://www.trannypornvr.com/" target="_blank">Tranny Porn VR</a></li>
