--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <marquee scrollamount=6 FONT style="COLOR=FF0000; FILTER: shadow(color=FFFF33 ); font-family:KaiTi; FONT-SIZE:11pt; WIDTH: 100%">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂虚假广告﹑钓鱼诈骗信息，内链病毒木马的假站，与本站无关。</marquee>
 	</div>												<div class="link">
 		 <div class="linka">
-		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://week.ga" target="_blank"><span style="color:#2bf7c0;">week.ga</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
+		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
@@ -218,17 +218,15 @@
 <li><a href="http://www.renyu888.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.avlua.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://laoyaba.com/" target="_blank">老鸭吧</a></li>
-<li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://www.4599.ink/" target="_blank">久久视频</a></li>
 <li><a href="http://laoshiji22.xyz/" target="_blank">天天爱视频</a></li>
 <li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
 <li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
-<li><a href="http://www.dy9.pw/" target="_blank">女优世界</a></li>
-<li><a href="http://www.3446.pw/" target="_blank">爱上色视频</a></li>
+<li><a href="http://www.3241.pw/" target="_blank">女优世界</a></li>
+<li><a href="http://32833.pw/" target="_blank">爱上色视频</a></li>
 <li><a href="http://www.9004.pw/" target="_blank">久零爱上视频</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
-<li><a href="http://www.7k6g.pw/" target="_blank">七情六欲</a></li>
 <li><a href="http://www.d9sp.xyz/" target="_blank">D9视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.caobiao789.com/" target="_blank">我要操婊</a></li>
@@ -243,7 +241,7 @@
 <li><a href="http://sesexia.co/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.lu1212.com/" target="_blank">哥哥干在线</a></li>
 <li><a href="https://oxxvideo.com/" target="_blank">哦叉叉视频</a></li>
-<li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
+<li><a href="http://roudao.biz/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
