--- a/index.html
+++ b/index.html
@@ -63,14 +63,12 @@
 <li><a href="http://xisezi.xyz/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
-<li><a href="http://www.ppzy8.top/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.jsmrke.com/?fromuid=99648" target="_blank">江山美人社区</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
-<li><a href="http://50.7.103.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
-<li><a href="http://cfukt.com/" target="_blank">CFUKT</a></li>
+<li><a href="http://192.240.116.150/bbs/forum.php" target="_blank">老王社区</a></li>
+<li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://14.102.250.19/forum/" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao2.com/" target="_blank">夜色王朝</a></li>
@@ -87,7 +85,7 @@
 <li><a href="http://www.spring4u.info/index.php" target="_blank">春满四合院</a></li>
 <li><a href="http://www.lt92.com/" target="_blank">龙腾小说网</a></li>
 <li><a href="http://www.dushang99.info/" target="_blank">杜尚论坛</a></li>
-<li><a href="http://mtl6.xyz/" target="_blank">摩天轮社区</a></li>
+<li><a href="http://mtl18.xyz/" target="_blank">摩天轮社区</a></li>
 <li><a href="http://6ppp6.club/" target="_blank">涩啪啪</a></li>
 <li><a href="http://204.152.220.40/index.php?fromuid=282768" target="_blank">黑暗圣殿</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
@@ -110,7 +108,7 @@
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.740547610.com/" target="_blank">宅男福利</a></li>
 <li><a href="http://www.yezubuluo.com/?454135" target="_blank">椰族部落</a></li>
-<li><a href="http://serendang.us/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
+<li><a href="http://qianyifa.net/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
 <li><a href="https://wuso.me/?fromuid=10995" target="_blank">屋受論壇</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
@@ -118,11 +116,13 @@
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99bbs9.com/?fromuid=685495" target="_blank">99re论坛</a></li>
 <li><a href="http://ww-youbbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
+<li><a href="http://qylbbs7.com/" target="_blank">青娱乐吧</a></li>
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://yixingjia123.com/?fromuid=416640" target="_blank">亿性家</a></li>
+<li><a href="http://www.srdao9.com/" target="_blank">俗人島</a></li>
 <li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
@@ -160,33 +160,31 @@
 <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
-<li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
+<li><a href="http://www.dabodh.cc/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
-<li><a href="http://www.beegooddh.com/" target="_blank">逼格福利导航</a></li>
+<li><a href="http://www.bigfuli.space/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
-<li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.meiniang.info/" target="_blank">媚娘福利导航</a></li>
 <li><a href="http://www.1024fuli.xyz/" target="_blank">1024福利导航</a></li>
 <li><a href="http://www.chaxuedh.pw/" target="_blank">插穴福利导航</a></li>
 <li><a href="http://www.caoporn6.info/" target="_blank">超碰福利导航</a></li>
-<li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
+<li><a href="http://ailovedd.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
 <li><a href="http://www.yikufl.info/" target="_blank">一库福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
-<li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
+<li><a href="http://www.dafjdh.xyz/" target="_blank">打飞机导航</a></li>
 <li><a href="http://yyliu.top/" target="_blank">夜夜流</a></li>
-<li><a href="http://www.caoluotuo.info/" target="_blank">草骆驼导航</a></li>
+<li><a href="http://www.cluotuo.com/" target="_blank">草骆驼导航</a></li>
 <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
 <li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
-<li><a href="http://www.fulisao.info/" target="_blank">福利嫂宅男导航</a></li>
+<li><a href="http://www.ifulisao.info/" target="_blank">福利嫂宅男导航</a></li>
 <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
-<li><a href="http://www.cangjigedh.info/" target="_blank">藏姬阁导航</a></li>
+<li><a href="http://www.icjgdh.info/" target="_blank">藏姬阁导航</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
-<li><a href="http://www.1djb.xyz/" target="_blank">福利射导航</a></li>
 <li><a href="http://www.baidu8.website/" target="_blank">苍井空导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
@@ -208,6 +206,7 @@
 <li><a href="http://www.wagaga.co/" target="_blank">哇嘎嘎</a></li>
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.saojj.xyz/" target="_blank">骚姐姐</a></li>
+<li><a href="http://www.icaoliu.me/" target="_blank">爱草榴在线</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
@@ -221,9 +220,10 @@
 <li><a href="http://www.4599.ink/" target="_blank">久久视频</a></li>
 <li><a href="http://laoshiji22.xyz/" target="_blank">天天爱视频</a></li>
 <li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
+<li><a href="http://www.avtianmao.win/" target="_blank">AV天猫</a></li>
 <li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
-<li><a href="http://www.3241.pw/" target="_blank">女优世界</a></li>
-<li><a href="http://32833.pw/" target="_blank">爱上色视频</a></li>
+<li><a href="http://www.dy9.pw/" target="_blank">女优世界</a></li>
+<li><a href="http://www.3445.pw/" target="_blank">爱上色视频</a></li>
 <li><a href="http://www.9004.pw/" target="_blank">久零爱上视频</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
@@ -232,9 +232,7 @@
 <li><a href="http://www.caobiao789.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
-<li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://www.porn5.club/" target="_blank">Porn5视频</a></li>
-<li><a href="http://www.bbbb8.info/" target="_blank">B8视频</a></li>
 <li><a href="http://www.444ap.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.8688av.com/" target="_blank">夏娃视频</a></li>
 <li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
@@ -250,28 +248,22 @@
 <li><a href="http://yeyeaisp.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
-<li><a href="http://www.qianjiaoba.com/" target="_blank">千娇吧</a></li>
-<li><a href="http://www.qianmeiba.com/" target="_blank">千媚吧</a></li>
-<li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
-<li><a href="http://www.wojiuyaolu.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.avba.club/" target="_blank">AV吧在线</a></li>
 <li><a href="http://www.xxoo44.com/" target="_blank">JJAIBB</a></li>
-<li><a href="http://www.seseluw.com/" target="_blank">色色撸网</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://av888av.com/" target="_blank">AV啪啪</a></li>
-<li><a href="http://www.avtb456.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb567.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.adv77.com/" target="_blank">AVHD100</a></li>
 <li><a href="https://avhd101.com/" target="_blank">高清AVHD101</a></li>
 <li><a href="http://www.selangjidi.com/" target="_blank">7M视频</a></li>
 <li><a href="http://www.5xww1.com/" target="_blank">5X社区</a></li>
-<li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
+<li><a href="http://www.lolomao.com/" target="_blank">东京热</a></li>
 <li><a href="http://99kk1.com/" target="_blank">久久热视频</a></li>
-<li><a href="http://qyl7.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.aotu14.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
@@ -299,7 +291,7 @@
 <li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
-<li><a href="http://www.999mm.us/" target="_blank">夜猫</a></li>
+<li><a href="http://www.777mm.us/" target="_blank">夜猫</a></li>
 <li><a href="http://www.sjkav.com/" target="_blank">在线手机视频</a></li>
 <li><a href="http://www.twav14.com/" target="_blank">AV中文</a></li>
 <li><a href="http://www.avhaha.com/" target="_blank">AVHAHA</a></li>
@@ -318,9 +310,12 @@
 <li><a href="https://myavsuper.com/" target="_blank">myAV SUPER</a></li>
 <li><a href="https://avgle.com/" target="_blank">Avgle</a></li>
 <li><a href="https://www.avfrog.com/" target="_blank">AVFrog</a></li>
-<li><a href="http://www.khdav.com/" target="_blank">高清在线AV</a></li>
+<li><a href="http://www.ku9av.com/" target="_blank">酷9网</a></li>
+<li><a href="http://www.kuav2.com/" target="_blank">酷AV</a></li>
+<li><a href="http://www.avku7.com/" target="_blank">高清在线AV</a></li>
+<li><a href="http://www.maotu.tv/" target="_blank">猫兔TV</a></li>
 <li><a href="http://www.pddse.com/" target="_blank">嫖老师AV</a></li>
-<li><a href="http://www.fcw7.com/" target="_blank">废柴视频网</a></li>
+<li><a href="http://fcw19.com/" target="_blank">废柴视频网</a></li>
 <li><a href="http://sifangpian.info/" target="_blank">私房片</a></li>
 <li><a href="http://www.youbbb.la/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.jiuseteng23.com/" target="_blank">九涩腾</a></li>
@@ -346,9 +341,7 @@
 <li><a href="http://www.kuntfutube.com/" target="_blank">KuntFu Tube</a></li>
 <li><a href="http://www.pornomovies.com/" target="_blank">PornoMovies</a></li>
 <li><a href="http://instantfap.com/" target="_blank">精彩片断</a></li>
-<li><a href="http://www.kanporno.com/" target="_blank">观看涩情</a></li>
 <li><a href="http://maturetubeporn.xyz/" target="_blank">Maturetube</a></li>
-<li><a href="http://lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://thisvid.com/" target="_blank">ThisVid</a></li>
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
 <li><a href="http://www.fetishshrine.com/" target="_blank">FetishShrine</a></li>
@@ -371,8 +364,14 @@
 <li><a href="http://www.epornik.com/" target="_blank">ePornik</a></li>
 <li><a href="http://www.shesfreaky.com/" target="_blank">ShesFreaky</a></li>
 <li><a href="http://www.hoodamateurs.com/" target="_blank">HOODAMA</a></li>
-<li><a href="http://sexvidx.tv/" target="_blank">SexvidX</a></li>
 <li><a href="http://www.hdmovz.com/" target="_blank">HDMOVZ</a></li>
+<li><a href="http://hqporner.com/" target="_blank">HQporner</a></li>
+<li><a href="http://plusone8.com/" target="_blank">Plusone8</a></li>
+<li><a href="https://www.sexvid.xxx/" target="_blank">SexVid</a></li>
+<li><a href="http://hdteenporn.tv/" target="_blank">HD Teen Porn</a></li>
+<li><a href="https://faapy.com/" target="_blank">faapy</a></li>
+<li><a href="https://www.hdpornvideos.xxx/" target="_blank">HD Porn</a></li>
+<li><a href="https://xfreehd.com/" target="_blank">XFreeHD</a></li>
 <li><a href="http://www.sozrel.xxx/" target="_blank">Sozrel</a></li>
 <li><a href="http://www.porno23.com/" target="_blank">Porno23</a></li>
 <li><a href="http://lentaporno.com/" target="_blank">LentaPorno</a></li>
@@ -389,9 +388,12 @@
 <li><a href="http://www.voyeurseason.com/" target="_blank">VoyeurSeason</a></li>
 <li><a href="http://www.swapsmut.com/" target="_blank">Swap Smut</a></li>
 <li><a href="http://www.homemadeporn.com/" target="_blank">Homeporn</a></li>
+<li><a href="https://www.pornhd.com/" target="_blank">PornHD</a></li>
 <li><a href="https://www.pornhub.com/" target="_blank">PornHub</a></li>
+<li><a href="https://www.pornky.com/" target="_blank">Pornky</a></li>
 <li><a href="http://pornmaki.com/" target="_blank">Pornmaki</a></li>
 <li><a href="http://www.proporn.com/" target="_blank">ProPorn</a></li>
+<li><a href="https://www.joysporn.com/" target="_blank">joysporn</a></li>
 <li><a href="http://www.likuoo.video/" target="_blank">likuoo</a></li>
 <li><a href="http://pornxs.com/" target="_blank">Pornxs</a></li>
 <li><a href="https://www.porn.com/" target="_blank">PORN</a></li>
@@ -436,11 +438,8 @@
 <li><a href="http://javhd3x.com/" target="_blank">JAVHD3X</a></li>
 <li><a href="http://javroot.com/" target="_blank">JAVROOT</a></li>
 <li><a href="http://smv.to/" target="_blank">SHARE MOVIE</a></li>
-<li><a href="http://www.youtuck.com/" target="_blank">YouTuck</a></li>
-<li><a href="https://www.pornsia.com/" target="_blank">Pornsia</a></li>
 <li><a href="http://www.jmetube.com/" target="_blank">JMETube</a></li>
 <li><a href="http://www.tokyoporn.com/" target="_blank">TokyoPorn</a></li>
-<li><a href="http://oc.notreal.cn/" target="_blank">欧美车</a></li>
 <li><a href="http://www.adult-sex-porn-tv.com/" target="_blank">Adult TV</a></li>
 				    </ul>
 		</div>
@@ -520,7 +519,7 @@
 <li><a href="http://milftoon.xxcomics.net/" target="_blank">Milftoon</a></li>
 <li><a href="http://collection-3d.com/" target="_blank">collection-3d</a></li>
 <li><a href="http://www.studiofow.com/" target="_blank">studiofow</a></li>
-<li><a href="http://jptorrent.info/" target="_blank">JP Torrent</a></li>
+<li><a href="http://javtorrent.xyz/" target="_blank">JP Torrent</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -540,7 +539,6 @@
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
 <li><a href="http://52weipai.net/" target="_blank">我爱微拍网</a></li>
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
-<li><a href="http://www.xgmeinv.com/" target="_blank">西瓜美女影视</a></li>
 <li><a href="http://www.win981.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://204.152.220.23/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
@@ -578,13 +576,12 @@
 		<ul>
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
-<li><a href="http://www.336yingyuan.top/" target="_blank">336影院</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://www.tanghenre.com/" target="_blank">汤很热</a></li>
 <li><a href="http://www.lusir8.com/" target="_blank">撸涩吧</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
-<li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
+<li><a href="https://www.dakashangche.com/" target="_blank">司机会所</a></li>
 <li><a href="http://www.puahome.com/" target="_blank">坏男孩</a></li>
 <li><a href="http://www.bocaishequ.cn/?u=4509" target="_blank">菠菜社区</a></li>
 <li><a href="https://103.3.60.42/" target="_blank">月兑会</a></li>
@@ -729,7 +726,7 @@
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="https://www.jptun.com/" target="_blank">街拍广场</a></li>
-<li><a href="http://91.t9m.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
+<li><a href="http://91.t9n.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
 <li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
