--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.wedid.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://wear.ml/" target="_blank">精品福利</a></li>
 <li><a href="http://papa118.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
@@ -282,6 +282,7 @@
 <li><a href="http://www.yjizz1.com/" target="_blank">YouJizz</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://xunyugong.org/" target="_blank">寻欲宫</a></li>
+<li><a href="http://www.dbj618.com/" target="_blank">大宝剑</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷</a></li>
@@ -444,6 +445,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
+<li><a href="http://www.ivnext.vip/" target="_blank">少女写真论坛</a></li>
 <li><a href="http://23.231.192.82/?fromuid=34160" target="_blank">wc俱乐部</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
@@ -528,7 +530,7 @@
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
 <li><a href="http://52weipai.net/" target="_blank">我爱微拍网</a></li>
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
-<li><a href="http://ywds.me/s/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="http://2017ywzd.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.win981.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://204.152.220.23/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
