--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77218.com/bbs/" target="_blank">Xiao77</a></li>
-<li><a href="http://1280yy.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
+<li><a href="http://1280yy.com/1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://38.103.161.160/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://xinghao.world/?fromuid=18" target="_blank">性好论坛</a></li>
@@ -64,7 +64,7 @@
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
-<li><a href="http://mf28.xyz/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://gamelaya.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
 <li><a href="http://192.240.116.150/bbs/forum.php" target="_blank">老王社区</a></li>
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
@@ -91,7 +91,7 @@
 <li><a href="http://204.152.220.40/index.php?fromuid=282768" target="_blank">黑暗圣殿</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://t3.9laik.org/pw/" target="_blank">1024核工厂</a></li>
-<li><a href="http://www.51youba.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
+<li><a href="http://www.51youba.pw/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://45.76.208.137/?fromuid=2571826" target="_blank">捷克論壇</a></li>
 <li><a href="http://setiantang.org/?fromuid=24994" target="_blank">涩天堂</a></li>
 <li><a href="http://www.lsj1080.cc/" target="_blank">MYHD1080</a></li>
@@ -161,26 +161,26 @@
 <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
+<li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.semmdh.info/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://www.dabodh.cc/" target="_blank">大波导航</a></li>
+<li><a href="http://yyliu.top/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
-<li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
-<li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.bigfuli.space/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
-<li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.meiniang.info/" target="_blank">媚娘福利导航</a></li>
 <li><a href="http://www.1024fuli.xyz/" target="_blank">1024福利导航</a></li>
 <li><a href="http://www.chaxuedh.pw/" target="_blank">插穴福利导航</a></li>
 <li><a href="http://www.caoporn6.info/" target="_blank">超碰福利导航</a></li>
+<li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
+<li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
+<li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://ailovedd.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.yikufl.info/" target="_blank">一库福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
 <li><a href="http://www.dafjdh.xyz/" target="_blank">打飞机导航</a></li>
-<li><a href="http://yyliu.top/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.cluotuo.com/" target="_blank">草骆驼导航</a></li>
 <li><a href="http://192.240.116.150/" target="_blank">老王福利导航</a></li>
-<li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
 <li><a href="http://www.ifulisao.info/" target="_blank">福利嫂宅男导航</a></li>
 <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.icjgdh.info/" target="_blank">藏姬阁导航</a></li>
@@ -231,10 +231,10 @@
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.porn5.club/" target="_blank">Porn5视频</a></li>
 <li><a href="http://www.8688av.com/" target="_blank">夏娃视频</a></li>
-<li><a href="http://www.daxiangjiao66.com/" target="_blank">大香蕉</a></li>
-<li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
 <li><a href="http://592sesexia.info/" target="_blank">超快色色下</a></li>
-<li><a href="https://oxxvideo.com/" target="_blank">哦叉叉视频</a></li>
+<li><a href="http://fhav123.info/" target="_blank">粉红山居</a></li>
+<li><a href="http://51luav.info/" target="_blank">51撸AV</a></li>
+<li><a href="http://tunvlav.info/" target="_blank">兔女郎</a></li>
 <li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
 <li><a href="http://www.ayay555.com/" target="_blank">超碰视频在线</a></li>
 <li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
@@ -244,11 +244,12 @@
 <li><a href="http://yeyeaisp.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
+<li><a href="https://oxxvideo.com/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.fuliai.top/" target="_blank">福利爱</a></li>
+<li><a href="http://www.hctsp.xyz/" target="_blank">火车头视频</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.avba.club/" target="_blank">AV吧在线</a></li>
 <li><a href="http://www.xxoo44.com/" target="_blank">JJAIBB</a></li>
-<li><a href="http://www.ayay777.com/" target="_blank">青青草视频</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://lvn99.com/" target="_blank">撸女神</a></li>
@@ -259,17 +260,16 @@
 <li><a href="http://www.adv77.com/" target="_blank">AVHD100</a></li>
 <li><a href="https://avhd101.com/" target="_blank">高清AVHD101</a></li>
 <li><a href="http://www.selangjidi.com/" target="_blank">7M视频</a></li>
-<li><a href="http://www.5xww1.com/" target="_blank">5X社区</a></li>
+<li><a href="http://www.5xss1.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.hongfange888.net/" target="_blank">红番阁</a></li>
-<li><a href="http://www.lolomao.com/" target="_blank">东京热</a></li>
+<li><a href="http://www.100zw.cc/" target="_blank">东京热</a></li>
 <li><a href="http://99kk1.com/" target="_blank">久久热</a></li>
 <li><a href="http://www.aotu17.com/" target="_blank">凹凸视频</a></li>
-<li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
+<li><a href="http://www.goqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.zz1253.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.vod47.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.195sihu.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.67kvkv.com/" target="_blank">95pao</a></li>
-<li><a href="http://67sz.com/" target="_blank">67射站</a></li>
 <li><a href="http://101.caomoo.com/" target="_blank">CaoPorn</a></li>
 <li><a href="http://www.helloavgirls.com/" target="_blank">HelloAVGirls</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
@@ -297,7 +297,7 @@
 <li><a href="http://www.444.coffee/" target="_blank">444coffee</a></li>
 <li><a href="http://sogiav.com/" target="_blank">中文字幕AV</a></li>
 <li><a href="http://xn--a-e56bt34abib.com/index.php" target="_blank">AV王朝</a></li>
-<li><a href="http://av6k.com/" target="_blank">AV6K</a></li>
+<li><a href="http://av6k.net/" target="_blank">AV6K</a></li>
 <li><a href="http://ourjav.com/" target="_blank">ourJAV</a></li>
 <li><a href="http://www.av539.com/" target="_blank">av539</a></li>
 <li><a href="http://www.letsjav.com/" target="_blank">Letsjav</a></li>
@@ -488,16 +488,16 @@
 <li><a href="http://www.blrgfz.com/" target="_blank">邪恶少女漫画</a></li>
 <li><a href="http://www.decask.com/" target="_blank">邪恶漫画吧</a></li>
 <li><a href="http://hentai-d.com/" target="_blank">Hentai-d</a></li>
-<li><a href="http://e-hentai.org/" target="_blank">E-Hentai</a></li>
+<li><a href="https://e-hentai.org/" target="_blank">E-Hentai</a></li>
 <li><a href="http://bbs.north-plus.net/" target="_blank">North Plus</a></li>
-<li><a href="http://www.xxshe.com/" target="_blank">和邪社</a></li>
-<li><a href="http://www.177picxx.info/" target="_blank">177漫畫</a></li>
+<li><a href="https://www.xxshe.com/" target="_blank">和邪社</a></li>
+<li><a href="http://www.177piczz.info/" target="_blank">177漫畫</a></li>
 <li><a href="https://bbs.holyo.org/?fromuid=3565" target="_blank">圣灵神域</a></li>
 <li><a href="http://www.hacg.la/wp/" target="_blank">琉璃神社</a></li>
 <li><a href="http://18h.animezilla.com/" target="_blank">宅宅愛動漫</a></li>
 <li><a href="https://www.wnacg.me/" target="_blank">紳士漫畫</a></li>
 <li><a href="https://www.acg.tf/" target="_blank">绅士二次元</a></li>
-<li><a href="https://htai.co/" target="_blank">绅士图书馆</a></li>
+<li><a href="https://hmog.me/" target="_blank">绅士图书馆</a></li>
 <li><a href="https://zerohentai.com/" target="_blank">Hentai0</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
 <li><a href="http://league-of-hentai.com/" target="_blank">League of Hentai</a></li>
@@ -576,7 +576,6 @@
 <li><a href="http://www.tanghenre.com/" target="_blank">汤很热</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
-<li><a href="http://56a7.wang/" target="_blank">56福利网</a></li>
 <li><a href="http://haodiao.org/" target="_blank">haodiao</a></li>
 <li><a href="http://www.yymov.com/?fromuid=13545" target="_blank">歪歪影音</a></li>
 <li><a href="http://www.jdlingyu.moe/" target="_blank">绝对领域</a></li>
@@ -615,7 +614,7 @@
 		<strong><a name="/11/">島國情报</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://j12lib.com/cn/" target="_blank">JavLibrary</a></li>
+<li><a href="http://13vlib.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="https://www.javhoo.com/" target="_blank">JAVHOO</a></li>
 <li><a href="http://www.avavav1.com/" target="_blank">AV小四郎</a></li>
@@ -625,7 +624,7 @@
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.99fanhao.com/" target="_blank">99番号网</a></li>
 <li><a href="http://javpop.biz/" target="_blank">JAVPOP</a></li>
-<li><a href="http://mo888.net/" target="_blank">Dioguitar23</a></li>
+<li><a href="http://mo999.net/" target="_blank">Dioguitar23</a></li>
 <li><a href="http://gojav.xyz/" target="_blank">GoJAV</a></li>
 <li><a href="http://gravure.com/tour/pages/index.php" target="_blank">GRAVURE</a></li>
 <li><a href="http://www.new-av.com/" target="_blank">92avday</a></li>
@@ -692,7 +691,7 @@
 		<strong><a name="/13/">VR资源</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.j8vr.com/?fromuid=26883" target="_blank">J8VR论坛</a></li>
+<li><a href="https://www.j8vr.com/?fromuid=26883" target="_blank">J8VR论坛</a></li>
 <li><a href="http://www.daoguovr.wang/?fromuid=22908" target="_blank">岛国VR网</a></li>
 <li><a href="https://vrporn.com/" target="_blank">VRPorn</a></li>
 <li><a href="https://www.sexlikereal.com/" target="_blank">SexLikeReal</a></li>
@@ -744,8 +743,8 @@
 <li><a href="http://jigadori.fkoji.com/" target="_blank">Twitter美女</a></li>
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
 <li><a href="https://www.nvshens.com/" target="_blank">宅男女神</a></li>
-<li><a href="http://119.23.24.149/" target="_blank">妹子图控</a></li>
 <li><a href="http://www.2017guomo.co/?fromuid=130143" target="_blank">国模</a></li>
+<li><a href="http://www.guomo.red/" target="_blank">國模網</a></li>
 <li><a href="http://www.17345.com/" target="_blank">三次元</a></li>
 <li><a href="http://asiangirlcunt.com/" target="_blank">asiangirlcunt</a></li>
 <li><a href="http://www.eastbabes.com/" target="_blank">EastBabes</a></li>
@@ -829,7 +828,6 @@
 <li><a href="http://www.seedpeer.eu/" target="_blank">SeePeer</a></li>
 <li><a href="https://isohunt.to/" target="_blank">isoHunt</a></li>
 <li><a href="https://www.limetorrents.cc/" target="_blank">LimeTorrents</a></li>
-<li><a href="http://extratorrent.cc/" target="_blank">ExtraTorrent</a></li>
 <li><a href="https://torrents.me/" target="_blank">torrents</a></li>
 <li><a href="http://www.demonoid.pw/" target="_blank">demonoid</a></li>
 <li><a href="http://filedron.com/" target="_blank">FileDron</a></li>
