--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
+<li><a href="http://www.haoavfl.com/" target="_blank">好AV导航</a></li>
 <li><a href="http://www.semmdh.info/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://www.dabodh.cc/" target="_blank">大波导航</a></li>
 <li><a href="http://yyliu.top/" target="_blank">夜夜流</a></li>
@@ -172,10 +173,16 @@
 <li><a href="http://www.1024fuli.xyz/" target="_blank">1024福利导航</a></li>
 <li><a href="http://www.chaxuedh.pw/" target="_blank">插穴福利导航</a></li>
 <li><a href="http://www.caoporn6.info/" target="_blank">超碰福利导航</a></li>
+<li><a href="http://nvyoudh.com/" target="_blank">找女优导航</a></li>
+<li><a href="http://chih.space/" target="_blank">痴汉导航</a></li>
+<li><a href="http://caolvchadh.com/" target="_blank">草绿茶导航</a></li>
+<li><a href="http://nima6.space/" target="_blank">尼玛导航</a></li>
+<li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
+<li><a href="http://luanpadh.com/" target="_blank">乱啪导航</a></li>
+<li><a href="http://ailovedd.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
 <li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
-<li><a href="http://ailovedd.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.yikufl.info/" target="_blank">一库福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
 <li><a href="http://www.dafjdh.xyz/" target="_blank">打飞机导航</a></li>
@@ -185,6 +192,7 @@
 <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.icjgdh.info/" target="_blank">藏姬阁导航</a></li>
 <li><a href="http://www.baidu8.website/" target="_blank">苍井空导航</a></li>
+<li><a href="http://www.qq7.pw/" target="_blank">亲亲去网址导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
@@ -204,6 +212,7 @@
 <li><a href="http://www.thkav.info/" target="_blank">桃花开</a></li>
 <li><a href="http://www.wagaga.co/" target="_blank">哇嘎嘎</a></li>
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
+<li><a href="http://www.dashuquanji.com/" target="_blank">达叔涂鸦</a></li>
 <li><a href="http://www.saojj.xyz/" target="_blank">骚姐姐</a></li>
 <li><a href="http://www.icaoliu.me/" target="_blank">爱草榴在线</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
