--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <li><a href="http://caolvchadh.com/" target="_blank">草绿茶导航</a></li>
 <li><a href="http://nima6.space/" target="_blank">尼玛导航</a></li>
 <li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
-<li><a href="http://luanpadh.com/" target="_blank">乱啪导航</a></li>
+<li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
 <li><a href="http://ailovedd.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
