--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<ul>
 <li><a href="http://cl.wedid.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://wear.ml/" target="_blank">精品福利</a></li>
-<li><a href="http://papa118.com/?fromuid=8" target="_blank">啪啪社区</a></li>
+<li><a href="http://hjv5.pw/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77218.com/bbs/" target="_blank">Xiao77</a></li>
